# avalonia-ui-mcp-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  markdown.rs  types.rs
crates/resources/: Cargo.toml  build.rs
crates/resources/data/: controls.json  migration-guide.json  xaml-patterns.json
crates/resources/src/: lib.rs  loader.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: http_server.rs  main.rs  server.rs
crates/services/: Cargo.toml
crates/services/src/: async_file.rs  cache.rs  error_handling.rs  input_validation.rs  lib.rs  markdown.rs  telemetry.rs
crates/tools/: Cargo.toml
crates/tools/src/: accessibility_tool.rs  animation_tool.rs  api_integration_tool.rs  architecture_template_tool.rs  custom_control_generator.rs  data_access_pattern_tool.rs  debugging_assistant_tool.rs  diagnostic_tool.rs  echo_tool.rs  lib.rs  localization_tool.rs  performance_analysis_tool.rs  project_generator_tool.rs  security_pattern_tool.rs  service_layer_tool.rs  testing_integration_tool.rs  theming_tool.rs  uiux_design_tool.rs  xaml_validation_tool.rs
crates/tools/tests/: endpoint_tests.rs  new_endpoint_tests.rs
scripts/: build-debian-x64.sh
tests/: endpoint_tests.rs
