[package]
name = "avalonia-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AvaloniaUI MCP Server binary with STDIO and HTTP transport support"
keywords = ["mcp", "avalonia", "server", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "avalonia-mcp-server"
path = "src/main.rs"

[dependencies]
# Core crates
avalonia-mcp-core = "0.1.0"
avalonia-mcp-services = "0.1.0"
avalonia-mcp-resources = "0.1.0"
avalonia-mcp-tools = "0.1.0"

# MCP Protocol
rmcp = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# HTTP Server (optional for HTTP transport)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
dotenvy = { workspace = true }

[features]
default = ["stdio"]
stdio = []
http = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:hyper",
    "dep:hyper-util",
]
